# some_works_from_LETI

./: .gitignore  README.md  main.c
Garanin_Roman_OOP_lb1/: Garanin_Roman_lb4.docx  Garanin_Roman_lb5.docx  Garanin_Roman_lb6.docx  UML_Garanin_lab.puml
Garanin_Roman_OOP_lb1/src/: CMakeLists.txt  builder_field.cc  cell.cc  control_keys  controller.cc  first_aid_kit.cc  game.cc  input_from_console.cpp  input_from_keyboard.cc  interlayer.cc  interlayer.cpp  log_of_file.cc  log_of_file.cpp  log_of_terminal.cc  log_of_terminal.cpp  main.cpp  massage_key_not_work.cpp  massage_key_push.cpp  massage_log_lose.cpp  massage_log_new_game.cpp  massage_log_win.cpp  message_key_not_work.cc  message_key_push.cc  message_log_lose.cc  message_log_new_game.cc  message_log_win.cc  mine.cc  player.cc  playing_field.cc  teleport.cc  terminal_render.cc  terminal_render.cс  tracker.cc  tracker.cс
Garanin_Roman_OOP_lb1/src/headers/: builder_field.h  cell.h  controller.h  enum_key_operations.h  enum_states_of_game.h  event.h  first_aid_kit.h  game.h  input_from_console.h  input_from_keyboard.h  input_interface.h  interface_render.h  interlayer.h  key_operations.h  log_of_file.h  log_of_terminal.h  logger.h  massage.h  massage_key_not_work.h  massage_key_push.h  massage_log_lose.h  massage_log_new_game.h  massage_log_win.h  message.h  message_key_not_work.h  message_key_push.h  message_log_lose.h  message_log_new_game.h  message_log_win.h  mine.h  player.h  playing_field.h  states_walk.h  teleport.h  terminal_render.h  tracker.h
Garanin_Roman_cw/src/: main.c
